Se carga los estilos base de saco oliveros

--- a/gepsac/gepsac-backoffice/src/main/webapp/resources/css/sca-template.css
+++ b/gepsac/gepsac-backoffice/src/main/webapp/resources/css/sca-template.css
@@ -24,7 +24,7 @@ table{
 }
 
 .div-busqueda-titulo{
-    background-color: #96AD68;
+    background-color: rgb(23, 55, 94);;
     color: white;
     border-bottom: 1px solid #EFF2F5;
     border-radius: 5px;
