--- a/gepsac/gepsac-backoffice/src/main/webapp/resources/css/skinSCA.css
+++ b/gepsac/gepsac-backoffice/src/main/webapp/resources/css/skinSCA.css
@@ -149,7 +149,7 @@ a.chg-password:hover,a.rst-password:hover {
     background: url('../images/novatronicLogo.png') no-repeat;
     height: 75px;
     padding-left: 95px;
-    text-align: left;
+    text-align: center;
     /*   width: 95%; */
 }
 
@@ -183,7 +183,7 @@ a.chg-password:hover,a.rst-password:hover {
 }
 
 .separatorGreen {
-    border-top: 2px solid #86B404;
+    border-top: 2px solid #0b32bb;
     width: 98%;
     margin: 0 auto;
     margin-bottom: 15px;
@@ -233,7 +233,7 @@ a.chg-password:hover,a.rst-password:hover {
     cursor: pointer;
     padding: 8px;
     margin: 0;
-    background-color: #96AD68;
+    background-color: #CB1D1D;
     border-bottom: 1px solid #eff2f5;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -270,11 +270,11 @@ a.chg-password:hover,a.rst-password:hover {
 
 #accordion a {
     text-decoration: none;
-    color: #7A7A7A;
+    color: #4F81BC;
 }
 
 #accordion a:hover {
-    color: #96AD68;
+    color: #0b32bb;
     /*font-weight: 600;*/
 }
 
