Se carga el estilo base para los botones

--- a/gepsac/gepsac-backoffice/src/main/webapp/resources/css/jquery-override.css
+++ b/gepsac/gepsac-backoffice/src/main/webapp/resources/css/jquery-override.css
@@ -1,5 +1,5 @@
 .ui-button .ui-button-text{
-    background-color: #96AD68;
+    background-color: #4f81bc;
     padding: 2px;
     color: white;
 }
