--- a/gepsac/gepsac-backoffice/src/main/webapp/resources/css/skinSCA.css
+++ b/gepsac/gepsac-backoffice/src/main/webapp/resources/css/skinSCA.css
@@ -255,10 +255,11 @@ a.chg-password:hover,a.rst-password:hover {
     display: block;
     font-size: 14px;
     font-weight: normal;
-    height: 10px;
+    /*height: 10px;*/
     text-align: center;
     width: 170px;
     margin: 2px;
+    border-bottom: 1px solid;
 }
 
 #accordion ul li:hover {
